<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NoteTaker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="_">-</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="title_activity_list_notes">Note Taker</string>
    <string name="add_note">Add Note</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_item_it_can_t_be_undone_">Are you sure you want to delete this item? It can\'t be undone?</string>

</resources>
